--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,8 @@
 [build]
   command = "npm run build"
   publish = "build"
+
+[[redirects]]
+  from = "/api/shorten"
+  to = "https://www.buly.kr/api/shoturl.siso"
+  status = 200
