--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"vitest-browser-svelte": "^1.1.0"
 	},
 	"dependencies": {
-		"daisyui": "^5.4.7"
+		"daisyui": "^5.4.7",
+		"node-fetch": "^2.7.0"
 	}
 }
