feat: 개발장비 현황판 추가

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"vitest-browser-svelte": "^1.1.0"
 	},
 	"dependencies": {
+		"@supabase/supabase-js": "^2.87.3",
 		"daisyui": "^5.4.7",
 		"node-fetch": "^2.7.0"
 	}
