--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,8 @@
   directory = "netlify/functions"
 
 [dev]
-    framework = "#static"
-    port = 8888
-    autoLaunch = false
+  command = "npm run dev"
+  framework = "#custom"
+  targetPort = 5173
+  port = 8888
+  autoLaunch = false
