--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
+		"dev:netlify": "netlify dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
@@ -15,35 +16,35 @@
 		"test:e2e": "playwright test"
 	},
 	"devDependencies": {
-		"@eslint/compat": "^1.4.0",
-		"@eslint/js": "^9.38.0",
-		"@playwright/test": "^1.56.1",
-		"@sveltejs/adapter-netlify": "^5.2.4",
-		"@sveltejs/kit": "^2.47.1",
-		"@sveltejs/vite-plugin-svelte": "^6.2.1",
-		"@tailwindcss/vite": "^4.1.17",
+		"@eslint/compat": "^2.0.2",
+		"@eslint/js": "^10.0.1",
+		"@playwright/test": "^1.58.2",
+		"@sveltejs/adapter-netlify": "^6.0.4",
+		"@sveltejs/kit": "^2.53.1",
+		"@sveltejs/vite-plugin-svelte": "^6.2.4",
+		"@tailwindcss/vite": "^4.2.1",
 		"@types/node": "^22",
-		"@vitest/browser": "^3.2.4",
+		"@vitest/browser": "^4.0.18",
 		"dotenv-cli": "^11.0.0",
-		"eslint": "^9.38.0",
+		"eslint": "^10.0.2",
 		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-svelte": "^3.12.4",
-		"globals": "^16.4.0",
-		"playwright": "^1.56.1",
-		"prettier": "^3.6.2",
-		"prettier-plugin-svelte": "^3.4.0",
-		"prettier-plugin-tailwindcss": "^0.7.1",
-		"svelte": "^5.41.0",
-		"tailwindcss": "^4.1.17",
-		"vite": "^7.1.10",
+		"eslint-plugin-svelte": "^3.15.0",
+		"globals": "^17.3.0",
+		"playwright": "^1.58.2",
+		"prettier": "^3.8.1",
+		"prettier-plugin-svelte": "^3.5.0",
+		"prettier-plugin-tailwindcss": "^0.7.2",
+		"svelte": "^5.53.3",
+		"tailwindcss": "^4.2.1",
+		"vite": "^7.3.1",
 		"vite-plugin-devtools-json": "^1.0.0",
 		"vite-plugin-mkcert": "^1.17.9",
-		"vitest": "^3.2.4",
-		"vitest-browser-svelte": "^1.1.0"
+		"vitest": "^4.0.18",
+		"vitest-browser-svelte": "^2.0.2"
 	},
 	"dependencies": {
-		"@supabase/supabase-js": "^2.87.3",
-		"daisyui": "^5.4.7",
-		"node-fetch": "^2.7.0"
+		"@supabase/supabase-js": "^2.97.0",
+		"daisyui": "^5.5.19",
+		"node-fetch": "^3.3.2"
 	}
 }
