--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-# IP 제한 설정
-# 허용할 IP 주소를 쉼표로 구분하여 입력하세요
-# 예: ALLOWED_IPS=192.168.1.100,203.0.113.50
-ALLOWED_IPS=
+# Supabase 설정
+PUBLIC_SUPABASE_URL=
+PUBLIC_SUPABASE_ANON_KEY=
